# iris

./: Cargo.toml  readme.md
examples/: device_update.rs  example_configuration.yaml  validate_rtu.rs
src/: clients.rs  defaults.rs  error.rs  event.rs  handlers.rs  http_handlers.rs  incoming_event.rs  lib.rs  main.rs  outgoing_event.rs  resp.rs  response.rs  server.rs  ws.rs  ws_handlers.rs
src/api/: mod.rs
src/model/: device.rs  mod.rs  rtu.rs  rtu_error.rs  validators.rs
src/resources/: device.rs  mod.rs  rtu.rs
