[package]
name = "nbc_iris"
version = "0.7.0"
edition = "2021"
description = "The networking component of the brewery control system"
license = "MIT"
documentation = "https://docs.rs/crate/nbc_iris/latest"
repository = "https://github.com/NavasotaBrewing/iris"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4.17"
env_logger = "0.9.1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_yaml]
version = "0.9"

[dependencies.serde_json]
version = "1.0"

[dependencies.warp]
version = "0.3.3"

[dependencies.tokio]
version = "1"
features = ["full"]


[dependencies.brewdrivers]
path = "/home/llamicron/usr/dev/NavasotaBrewing/brewdrivers"
version = "0.12"
# default-features = false
# optional = true

[dev-dependencies]
tokio-test = "0.4.2"
pretty_assertions = "1.3.0"
