[package]
name = "nbc_iris"
version = "0.7.2"
edition = "2021"
description = "The networking component of the brewery control system"
license = "MIT"
documentation = "https://docs.rs/crate/nbc_iris/latest"
repository = "https://github.com/NavasotaBrewing/iris"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
log = "0.4.17"
env_logger = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.21"
gotham = "0.7.1"
gotham_restful = "0.7.8"
hyper = "0.14"

[dependencies.brewdrivers]
path = "/home/llamicron/usr/dev/NavasotaBrewing/brewdrivers"
# version = "0.15"
# default-features = false
# optional = true

[dev-dependencies]
tokio-test = "0.4.2"
pretty_assertions = "1.3.0"
ctor = "0.1.26"
